--- a/src/styles/cashbook/GetBudgetSettings.css
+++ b/src/styles/cashbook/GetBudgetSettings.css
@@ -1,21 +1,21 @@
-.cashbook-budget-settings-container {
+.budget-settings-container {
   padding: 20px;
   background-color: #f9f9f9;
 }
 
-.cashbook-budget-h2 {
+h2 {
   text-align: center;
   color: #333;
   margin-bottom: 20px;
 }
 
-.cashbook-budget-list {
+.budget-list {
   display: flex;
   flex-direction: column;
   gap: 15px;
 }
 
-.cashbook-budgetsetting-item {
+.budget-item {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,48 +24,44 @@
   padding: 10px 15px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  gap: 5px;
 }
 
-.cashbook-budget-category {
+.budget-category {
   font-size: 16px;
   font-weight: bold;
   color: #555;
   flex: 1;
 }
 
-.cashbook-budget-amount input {
+.budget-amount input {
   width: 100px;
   padding: 5px;
   border: 1px solid #ddd;
   border-radius: 4px;
   text-align: right;
-  margin-right: 10px; /* 금액 입력 필드와 다음 요소 간격 */
 }
 
-.cashbook-budget-edit .edit-icon {
+.budget-edit .edit-icon {
   background-color: transparent;
   border: none;
   cursor: pointer;
   font-size: 16px;
-  margin-right: 10px; /* 아이콘과 체크박스 간격 */
 }
 
-.cashbook-budget-toggle .switch {
+.budget-toggle .switch {
   position: relative;
   display: inline-block;
   width: 40px;
   height: 20px;
-  margin-left: 5px; /* 체크박스 여백 조정 */
 }
 
-.cashbook-budget-toggle .switch input {
+.budget-toggle .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-.cashbook-budget-toggle .slider {
+.budget-toggle .slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -77,7 +73,7 @@
   border-radius: 20px;
 }
 
-.cashbook-budget-toggle .slider:before {
+.budget-toggle .slider:before {
   position: absolute;
   content: "";
   height: 14px;
@@ -89,15 +85,15 @@
   border-radius: 50%;
 }
 
-.cashbook-budget-toggle input:checked + .slider {
+.budget-toggle input:checked + .slider {
   background-color: #4caf50;
 }
 
-.cashbook-budget-toggle input:checked + .slider:before {
+.budget-toggle input:checked + .slider:before {
   transform: translateX(20px);
 }
 
-.cashbook-save-button {
+.save-button {
   display: block;
   margin: 20px auto;
   padding: 10px 20px;
@@ -110,6 +106,6 @@
   transition: background-color 0.3s;
 }
 
-.cashbook-save-button:hover {
+.save-button:hover {
   background-color: #ff8c00;
 }
