--- a/src/styles/cashbook/HeaderCashbook.css
+++ b/src/styles/cashbook/HeaderCashbook.css
@@ -67,8 +67,9 @@ body {
   top: 0; /* 화면 상단에서 0 위치 */
   left: 0; /* 화면 왼쪽에서 0 위치 */
   width: 100%; /* 전체 너비 설정 */
-  height: 100%; /* 전체 높이 설정 */
+  height: 80%; /* 전체 높이 설정 */
   background-color: rgba(0, 0, 0, 0.5); /* 반투명 검정 배경 */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5); /* 화면 전체에 그림자 */
   display: flex; /* 플렉스 레이아웃 활성화 */
   justify-content: center; /* 모달을 수평 중앙 정렬 */
   align-items: center; /* 모달을 수직 중앙 정렬 */
