--- a/src/styles/cashbook/SlideDrawer.css
+++ b/src/styles/cashbook/SlideDrawer.css
@@ -5,14 +5,19 @@
   position: fixed; /* 화면에 고정된 위치 */
   top: 0; /* 화면 상단부터 시작 */
   right: 0; /* 화면 우측에 붙음 */
-  width: 600px; /* 슬라이드 패널의 너비 설정 */
+  width: 390px; /* 슬라이드 패널의 너비 설정 */
   height: 100%; /* 화면 전체 높이 */
   background-color: white; /* 배경색을 흰색으로 설정 */
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5); /* 좌측에 그림자 추가 */
   padding: 20px; /* 내부 여백 설정 */
   z-index: 1500; /* 다른 요소보다 위에 위치하지만 모달보다는 낮게 설정 */
   transform: translateX(100%); /* 기본적으로 화면 오른쪽 밖으로 숨김 */
+  overflow-y: auto; /* 세로 방향 스크롤 추가 (내용이 많을 경우) */
   transition: transform 0.3s ease-in-out; /* 슬라이드 열고 닫을 때 애니메이션 적용 */
+  border-top-right-radius: 0; /* 오른쪽 상단 모서리는 둥글지 않게 */
+  border-bottom-right-radius: 0; /* 오른쪽 하단 모서리도 둥글지 않게 */
+  border-top-left-radius: 30px; /* 왼쪽 상단 모서리만 둥글게 */
+  border-bottom-left-radius: 30px; /* 왼쪽 하단 모서리만 둥글게 */
 }
 
 .cashbook-slide-drawer-add.open {
