--- a/src/styles/community/QuillEditor.css
+++ b/src/styles/community/QuillEditor.css
@@ -12,3 +12,10 @@
   overflow: hidden; /* 경계선 밖으로 흐르는 부분 숨기기 */
   min-height: 150px;
 }
+
+.ql-editor {
+  white-space: normal; /* 자동 줄바꿈 */
+  word-wrap: break-word; /* 긴 단어가 잘리지 않도록 설정 */
+  word-break: break-word; /* 긴 단어가 화면을 밀지 않도록 처리 */
+  overflow-wrap: break-word; /* 긴 단어가 영역을 벗어나지 않도록 설정 */
+}
