--- a/src/styles/community/TopicInfo.css
+++ b/src/styles/community/TopicInfo.css
@@ -57,8 +57,18 @@
 
 
 .topic-content {
-   padding-top: 3%;
+   width: 100%;
+   padding-top: 5%;
    font-size: 16px;
+   white-space: normal; /* 자동 줄바꿈 */
+   word-wrap: break-word; /* 긴 단어가 잘리지 않도록 설정 */
+   word-break: break-word; /* 긴 단어가 화면을 밀지 않도록 처리 */
+   overflow-wrap: break-word; /* 긴 단어가 영역을 벗어나지 않도록 설정 */
+}
+
+.topic-content > p {
+   padding: 0;
+   margin: 0;
 }
 
 
