--- a/src/styles/community/TopicInfo.css
+++ b/src/styles/community/TopicInfo.css
@@ -71,6 +71,13 @@
    margin: 0;
 }
 
+.topic-content img {
+  max-width: 100%;
+  max-height: 1000px;
+  width: auto;
+  height: auto;
+}
+
 
 .topic-votes {
    justify-content: center;   /* 중앙 정렬 */
