--- a/src/styles/community/TopicListView.css
+++ b/src/styles/community/TopicListView.css
@@ -56,10 +56,13 @@
 .topics-title {
   font-size: 18px;
   font-weight: bold;
+  white-space: nowrap;          /* 텍스트가 줄 바꿈 없이 한 줄로 유지되도록 설정 */
+  overflow: hidden;             /* 넘친 텍스트를 숨깁니다 */
+  text-overflow: ellipsis;      /* 넘친 텍스트에 ...을 표시 */
 }
 
 .topics-comments {
-  align-self: flex-end;  /* 우측에 배치 */
+  white-space: nowrap;   /* 댓글은 한 줄로 유지 */
 }
 
 .topics-footer {
