--- a/src/styles/community/Comment.css
+++ b/src/styles/community/Comment.css
@@ -79,7 +79,7 @@
 
 .comment-image {
   max-width: 240px; /* 최대 너비를 부모 요소의 너비로 제한 */
-  max-height: 120px; /* 최대 높이를 400px로 제한 */
+  max-height: 160px; /* 최대 높이를 400px로 제한 */
   width: auto; /* 비율을 유지한 채 크기 조정 */
   height: auto;
 }
@@ -145,6 +145,33 @@
 }
 
 .comment-post-content {
-  border-radius: 0 0 6px 6px;
   font-size: 18px;
+  height: 100%;
+  min-height: 120px;
+  border-radius: 0 0 6px 6px;
+  display: flex;             /* 가로로 배치 */
+  align-items: center;       /* 세로 중앙 정렬 */
+  justify-content: center;   /* 수평 중앙 정렬 */
+}
+
+.comment-post-image {
+  max-width: 240px; /* 최대 너비를 부모 요소의 너비로 제한 */
+  max-height: 240px; /* 최대 높이를 400px로 제한 */
+  width: auto; /* 비율을 유지한 채 크기 조정 */
+  height: auto;
+}
+
+.image-del-button {
+  padding: 0;                     /* 패딩 제거 */
+  height: auto;                   /* 높이를 자동으로 맞춤 */
+  width: auto;                    /* 너비를 자동으로 맞춤 */
+  background-color: transparent;  /* 배경을 투명하게 설정 */
+  border: none;                   /* 테두리 없애기 */
+}
+
+.comment-image-btns {
+  justify-content: center;   /* 중앙 정렬 */
+  align-items: center;       /* 세로 중앙 정렬 */
+  display: flex;             /* 가로로 배치 */
+  gap: 20px;
 }
