--- a/src/styles/cashbook/CashbookMain.css
+++ b/src/styles/cashbook/CashbookMain.css
@@ -1,54 +1,9 @@
-/* 슬라이드 컨테이너 기본 스타일 */
-.cashbook-slide-container {
-  position: fixed;
-  top: 0;
-  right: -100%; /* 처음에 화면 밖으로 숨김 */
-  width: 500px;
-  height: 100%;
-  background-color: white;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-  transition: right 0.3s ease-in-out; /* 부드러운 애니메이션 */
-  z-index: 1100; /* 다른 요소 위에 표시 */
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
-}
-
-/* 슬라이드 화면이 열렸을 때 */
-.cashbook-slide-container.open {
-  right: 0; /* 화면에 표시 */
-}
-
-/* 슬라이드 헤더 */
-.cashbook-slide-header {
-  display: flex;
-  justify-content: space-between; /* 닫기 버튼과 제목을 양쪽 끝으로 */
-  align-items: center;
-  padding: 20px;
-  height: 70px; /* 헤더 영역의 높이 고정 */
-  background-color: #f5f5f5;
-  border-bottom: 1px solid #ddd;
-  position: relative; /* 닫기 버튼 위치 지정 가능 */
-  z-index: 10; /* 헤더가 다른 요소 위에 표시 */
-  box-sizing: border-box; /* 패딩 포함 높이 계산 */
-}
-
-/* 닫기 버튼 스타일 */
-.cashbook-cashbook-close-btn {
-  font-size: 300%; /* 크기 */
-  background: none; /* 배경 없음 */
-  border: none; /* 테두리 없음 */
-  cursor: pointer; /* 클릭 가능한 커서 */
-  position: absolute; /* 헤더 내 위치 지정 */
-
-  right: 16px; /* 오른쪽 여백 */
-  z-index: 20; /* 다른 요소 위에 표시 */
-  color: #888181; /* 닫기 버튼 색상 */
-}
-
-/* 슬라이드 내용 */
-.cashbook-slide-content {
-  padding: 16px;
-  font-size: 16px;
-  color: #555;
-  overflow-y: auto; /* 내용이 많으면 스크롤 가능 */
-  height: calc(100% - 60px); /* 헤더를 제외한 높이를 계산 */
+.cashbookMain-main-container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 5px;
+  background-color: #f9f9f9; /* 배경색 */
+  border-radius: 8px; /* 모서리 둥글게 */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+  cursor: pointer; /* 손가락 모양 커서 */
 }
